--- a/backend/config/packages/api_platform.yaml
+++ b/backend/config/packages/api_platform.yaml
@@ -1,9 +1,10 @@
 api_platform:
     title: 'Hello API Platform'
     version: '1.0.0'
+    # Hemos movido 'json' al principio para que sea el formato preferido
     formats:
-        jsonld: ['application/ld+json']
         json: ['application/json']
+        jsonld: ['application/ld+json']
         html: ['text/html']
     docs_formats:
         jsonopenapi: ['application/vnd.openapi+json']
