--- a/backend/config/packages/security.yaml
+++ b/backend/config/packages/security.yaml
@@ -21,7 +21,7 @@ security:
             stateless: true
             json_login:
                 check_path: /api/login_check
-                username_path: email  # <--- AÑADIDO: Usar 'email' en lugar de 'username'
+                username_path: email
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
@@ -41,6 +41,9 @@ security:
 
     # Note: Only the *first* matching rule is applied
     access_control:
+        # Permitir OPTIONS (CORS preflight) globalmente para la API
+        - { path: ^/api, roles: PUBLIC_ACCESS, methods: [OPTIONS] }
+
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/api/users, roles: PUBLIC_ACCESS, methods: [POST] } # Registro
         - { path: ^/api/users/me, roles: IS_AUTHENTICATED_FULLY }      # Perfil
