--- a/backend/.env
+++ b/backend/.env
@@ -17,33 +17,24 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=cc89e875654654654654654654654654
+# Confiar en el proxy de Caddy y Ngrok
+TRUSTED_PROXIES=127.0.0.1,REMOTE_ADDR
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
-
-# Configuración coincidente con docker-compose.yml
 DATABASE_URL="postgresql://app_user:app_password@127.0.0.1:5432/app_db?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN="^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$"
+# Permitir localhost y cualquier subdominio de ngrok-free.app
+CORS_ALLOW_ORIGIN="^https?://(localhost|127\.0\.0\.1|.*\.ngrok-free\.app|.*\.ngrok\.io)(:[0-9]+)?$"
 ###< nelmio/cors-bundle ###
 
 ###> symfony/routing ###
-# URL base para generar enlaces absolutos (ej. en emails o consola)
 DEFAULT_URI="https://localhost:9443"
 ###< symfony/routing ###
 
 ###> symfony/messenger ###
-# Choose one of the transports below
-# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
-# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
